# ParcerINI

./: CMakeLists.txt  main.cpp  parcer.cpp  parcer.h
